modifying html, organizing assets folder

--- a/trainscheduler.html
+++ b/trainscheduler.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>NYT</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="../train-scheduler/assets/css/reset.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../train-scheduler/assets/css/style.css">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -45,7 +45,7 @@
                             <th>Next Arrival</th>
                             <th>Minutes Away</th>
                         </tr>
-                        <tr class="employee-view"></tr>
+                        <tr class="schedule-view"></tr>
                     </table>
                 </div>
             </div>
@@ -86,7 +86,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="../train-scheduler/assets/javascript/app.js"></script>
 </body>
 
 </html>
